# apertium-afr-nld

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README  aclocal.m4  af-nl-unsupervised.make  af-nl.prob  apertium-af-nl.af-nl.dix  apertium-af-nl.af-nl.t1x  apertium-af-nl.af-nl.t2x  apertium-af-nl.af-nl.t3x  apertium-af-nl.af.acx  apertium-af-nl.af.dix  apertium-af-nl.af.tsx  apertium-af-nl.nl-af.t1x  apertium-af-nl.nl-af.t3x  apertium-af-nl.nl.dix  apertium-af-nl.nl.dix.full  apertium-af-nl.nl.tsx  apertium-af-nl.post-af.dix  apertium-af-nl.post-nl.dix  apertium-af-nl.post-nl.t1x  apertium-afr-nld.afr-nld.dix  apertium-afr-nld.afr-nld.t1x  apertium-afr-nld.afr-nld.t2x  apertium-afr-nld.nld-afr.lrx  apertium-afr-nld.nld-afr.t1x  apertium-afr-nld.nld.dix  apertium-afr-nld.nld.rlx  apertium-afr-nld.nld.tsx  apertium-afr-nld.post-afr.dix  apertium-afr-nld.post-nld.dix  autogen.sh  configure.ac  modes.xml  nl-af-unsupervised.make  nl-af.prob  (+4 more)
af-tagger-data/: af.crp.txt
dev/: MULTIWORDS-AND-RULES  Nederlandse entries .txt  Tweetalig.txt  af-rootwords.txt  apertium-af-nl.af-old.tsx  apertium-af-nl.af.tsx  apertium-af-nl.nl.dix.OLD  bidix-nouns.txt  bilingual-summary.txt  entries afrikaans.txt  generation-summary.af-nl.txt  generation-summary.nl-af.txt  generation-summary.txt  generation-test.nl-af.sh  generation-test.sh  inconsistency.sh  missing-bidix-freq.sh  nl.wikt.speling.txt  run-corpus.sh  tenses  test-corpus.2.txt  test-corpus.txt  testvoc-summary.af-nl.txt  testvoc-summary.nl-af.txt  testvoc.sh  verbSep.txt
dev/bidix/: pending_adjectives.txt  pending_adverbs.txt  pending_conjunctions.txt  pending_determiners.txt  pending_nouns.txt  pending_numerals.txt  pending_prepositions.txt  pending_pronouns.txt  pending_proper_nouns.txt  pending_verbs.txt
dev/eval/: eval.2010-12-23.wikipedia.1.apertium.txt  eval.2010-12-23.wikipedia.1.txt  eval.2010-12-23.wikipedia.2.apertium.txt  eval.2010-12-23.wikipedia.2.txt  eval.2010-12-27.wikipedia.1.google.txt  eval.2010-12-27.wikipedia.2.google.txt  eval.2011-01-07.wikipedia.3.apertium.txt  eval.2011-01-07.wikipedia.3.google.txt  eval.2011-01-07.wikipedia.4.apertium.txt  eval.2011-01-07.wikipedia.4.google.txt  eval.2011-01-07.wikipedia.4.txt  evaluation-log.txt  run-eval.py  test-corpus.2.txt  test-corpus.txt
dev/eval/compounds/: compounds.random  compounds.top
dev/nld/: backup_update.sh
dev/testvoc/: inconsistency-summary.sh  inconsistency.sh  testvoc-errors.afr-nld.txt  testvoc-errors.nld-afr.txt  testvoc-summary.afr-nld.txt  testvoc-summary.nld-afr.txt  testvoc.sh
nl/: apertium-af-nl.nl.dix.full  trimDict.py  update.sh  update_n.sh
nl-tagger-data/: nl.crp  nl.crp.txt  nl.dic
nld/: update.sh
paper/: COMMENTS  Makefile  eamt11.bst  eamt11.sty  eamt11afnl.tex
paper/poster/: Makefile  eamt2011_poster.tex
test/: afr-nld-pending-chunker-expected.txt  afr-nld-pending-generator-expected.txt  afr-nld-pending-input.txt  afr-nld-pending-interchunk-expected.txt  afr-nld-pending-morph-expected.txt  afr-nld-pending-postchunk-expected.txt  afr-nld-pending-postgen-expected.txt  afr-nld-pending-postgen-gold.txt  afr-nld-pending-pretransfer-expected.txt  afr-nld-pending-tagger-expected.txt  afr-nld-regression-chunker-expected.txt  afr-nld-regression-generator-expected.txt  afr-nld-regression-input.txt  afr-nld-regression-interchunk-expected.txt  afr-nld-regression-morph-expected.txt  afr-nld-regression-postchunk-expected.txt  afr-nld-regression-postgen-expected.txt  afr-nld-regression-postgen-gold.txt  afr-nld-regression-pretransfer-expected.txt  afr-nld-regression-tagger-expected.txt  nld-afr-pending-disam-expected.txt  nld-afr-pending-generator-expected.txt  nld-afr-pending-input.txt  nld-afr-pending-interchunk-expected.txt  nld-afr-pending-lex-expected.txt  nld-afr-pending-morph-expected.txt  nld-afr-pending-postchunk-expected.txt  nld-afr-pending-postgen-expected.txt  nld-afr-pending-postgen-gold.txt  nld-afr-pending-pretransfer-expected.txt  nld-afr-pending-tagger-expected.txt  nld-afr-regression-chunker-expected.txt  nld-afr-regression-disam-expected.txt  nld-afr-regression-generator-expected.txt  nld-afr-regression-input.txt  nld-afr-regression-lex-expected.txt  nld-afr-regression-morph-expected.txt  nld-afr-regression-postchunk-expected.txt  nld-afr-regression-postgen-expected.txt  nld-afr-regression-postgen-gold.txt  (+3 more)
